text box drag and drop feature added

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,7 +4,7 @@
     --bg: rgb(247, 247, 247);
     --border: rgb(235, 235, 235);
     --border2: rgb(235, 235, 235);
-    --accent: #560cdf;
+    --accent: rgba(86, 12, 223, 1);
     --accent-hover: #4a0cbd;
 }
 
